# Software-Development-for-Intelligent-Autonomous-Vehicles

./: Project Summary.docx  ROS_Navigation_Project_Theory.docx  code discription.txt  presentation recording.txt
my_nav_pkg/: CMakeLists.txt  package.xml
my_nav_pkg/config/: move_base.yaml
my_nav_pkg/launch/: sim_nav.launch
my_nav_pkg/scripts/: simple_goal_sender.py
