<?xml version="1.0"?>
<package format="2">
  <name>my_nav_pkg</name>
  <version>0.0.1</version>
  <description>My ROS Navigation demo package</description>

  <maintainer email="me@example.com">Oz Rotshtain</maintainer>
  <license>BSD</license>

  <!-- Build / run dependencies -->
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>actionlib</depend>
  <depend>tf</depend>
</package>
